k8s_deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployhub
---
apiVersion: v1
kind: Namespace
metadata:
  name: deployhub-apps
  labels:
    deployhub.io/managed: "true"
