k8s_deploy/base/builder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder
  namespace: deployhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployhub-builder
  template:
    metadata:
      labels:
        app: deployhub-builder
    spec:
      serviceAccountName: builder-sa
      imagePullSecrets:
        - name: ecr-private-key
      containers:
        - name: builder
          image: deployhub-backend:latest
          command: ["python", "builder.py"]
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            exec:
              command: ["sh", "-c", "pgrep -f builder"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["sh", "-c", "pgrep -f builder"]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
          volumeMounts:
            - name: backend-data
              mountPath: /data
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: backend-data
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
